<?xml version="1.0"?>
<package format="2">
  <name>precise_description</name>
  <version>0.0.1</version>
  <description>
      URDF Description for Precise Flex 400
  </description>

  <author>Benjamin Maidel</author>
  <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>