<?xml version="1.0"?>
<package format="2">
  <name>precise_description</name>
  <version>0.0.1</version>
  <description>
      URDF Description for Precise Flex 400
  </description>

  <author>Alex Reed</author>
  <author>Benjamin Maidel</author>
  <author>Felix Messmer</author>
  <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>
  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
