<?xml version="1.0"?>
<package format="2">
  <name>precise_driver</name>
  <version>0.0.0</version>
  <description>The precise_driver package</description>

  <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>
  <author email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</author>

  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>realtime_tools</depend>
  <depend>ros_control_boilerplate</depend>

</package>
