<?xml version="1.0"?>
<package format="2">
  <name>precise_driver</name>
  <version>0.0.0</version>
  <description>Driver package for the Precise manipulators</description>

  <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>
  <author email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>cob_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>std_srvs</depend>

  <test_depend>roslaunch</test_depend>

</package>
