<?xml version="1.0"?>
<package format="2">
  <name>precise_driver</name>
  <version>0.0.7</version>
  <description>Driver package for the Precise manipulators</description>

  <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>
  <author email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>cob_srvs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>precise_description</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
